Fixed Travis configuration of running tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 before_script:
   - npm install -g @angular/cli
   - npm install -g karma
+  - ng build
 
 script: 
-  - ng build
-  - karma start config/karma.conf.js --single-run
+  - karma start karma.conf.js --single-run
